Cambios generales Se actualizaron los diferentes servicios, controladores y repositorio para mejorar el sistema